fix header on mobile width

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,6 @@
   color: #9698a6;
   display: flex;
   justify-content: center;
-  overflow: hidden;
   padding-left: 2rem;
   padding-right: 2rem; }
   .header__box {
@@ -200,20 +199,20 @@
       .header__box__image--bg {
         left: -112px;
         position: absolute;
-        overflow: hidden;
+        overflow-x: hidden;
         top: -261px;
         z-index: 1; }
         @media only screen and (max-width: 1439px) {
           .header__box__image--bg {
-            width: 400px;
-            left: -36px;
-            top: -65px; } }
+            left: -66px;
+            top: -132px;
+            width: 450px; } }
       .header__box__image--phone {
         left: 75px;
         position: absolute;
         top: -125px;
         z-index: 1;
-        overflow: hidden; }
+        overflow-x: hidden; }
         @media only screen and (max-width: 1439px) {
           .header__box__image--phone {
             left: 50%;
